--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         #cuidados .cuidados-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(80%, 1fr));
             gap: 50px;
             padding: 50px;
             justify-items: center;
