--- a/index.html
+++ b/index.html
@@ -335,9 +335,10 @@
 
             <br>
             <p>
-                "E por que andais ansiosos quanto ao vestuário? Considerai como crescem os lírios do
+                "E por que andais ansiosos quanto ao vestuário? 
+                <br>Considerai como crescem os lírios do
                 campo: eles não trabalham, nem fiam. Eu, contudo, vos afirmo que nem Salomão, em toda a sua glória, se
-                vestiu como qualquer deles.", <i>Mateus 6:28-29</i>
+                vestiu como qualquer deles.", <i>Mateus 6:28-29
             </p>
         </div>
     </section>
