--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 "E por que andais ansiosos quanto ao vestuário? 
                 <br>Considerai como crescem os lírios do
                 campo: eles não trabalham, nem fiam. Eu, contudo, vos afirmo que nem Salomão, em toda a sua glória, se
-                vestiu como qualquer deles.", <i>Mateus 6:28-29
+                vestiu como qualquer deles.", <i>Mateus 6:28-29</i>
             </p>
         </div>
     </section>
