--- a/index.html
+++ b/index.html
@@ -484,7 +484,9 @@
             </div>
             <div class="coluna">
                 <h3>Alimento</h3>
-                <p>Fonte primária de alimento para muitos organismos.</p>
+                <p>Fonte primária de alimento para muitos organismos.
+                <br>🌸🍏🍒🍊🍇
+                </p>
             </div>
             <div class="coluna">
                 <h3>Beleza e Bem-Estar</h3>
