--- a/index.html
+++ b/index.html
@@ -484,10 +484,13 @@
             </div>
             <div class="coluna">
                 <h3>Alimento</h3>
-                <p>Fonte primária de alimento para muitos organismos.
-                <br>🌸🍏🍒🍊🍇
-                </p>
+                <p>Fonte primária de alimento para muitos organismos.</p>
             </div>
+            <div class="coluna">
+                <h3>Frutos 😊🌸🍏🍒🍊🍇</h3>
+                <p>Muitas plantas produzem flores antes de gerar frutos. As flores são essenciais para a polinização, atraindo polinizadores como abelhas e borboletas. Esse processo é crucial para a reprodução das plantas e o desenvolvimento dos frutos. Exemplos incluem macieiras, cerejeiras, laranjeiras e videiras. As flores garantem a diversidade genética e a continuidade das espécies.</p>
+            </div>
+
             <div class="coluna">
                 <h3>Beleza e Bem-Estar</h3>
                 <p>Melhoram o ambiente e promovem o bem-estar mental.</p>
