--- a/index.html
+++ b/index.html
@@ -488,8 +488,7 @@
             </div>
             <div class="coluna">
                 <h3>Frutos 😊🌸🍏🍒🍊🍇</h3>
-                <p>em resumo
-                    Muitas plantas produzem flores antes de gerar frutos. As flores são essenciais para a polinização, atraindo polinizadores como abelhas e borboletas. Esse processo é crucial para a reprodução das plantas e o desenvolvimento dos frutos. Exemplos incluem macieiras, cerejeiras, laranjeiras e videiras. As flores garantem a diversidade genética e a continuidade das espécies.</p>
+                <p>Flores atraem polinizadores, essenciais para a reprodução das plantas e o desenvolvimento dos frutos.</p>
             </div>
 
             <div class="coluna">
