--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <div class="cuidados-grid">
             <div class="coluna">
                 <h3>Polinização</h3>
-                <p>Atraem polinizadores, garantindo a reprodução das plantas.</p>
+                <p>Flores atraem polinizadores, essenciais para a reprodução das plantas e o desenvolvimento dos frutos. 😊🌸🍏🍒🍊🍇</p>
             </div>
             <div class="coluna">
                 <h3>Biodiversidade</h3>
@@ -486,11 +486,6 @@
                 <h3>Alimento</h3>
                 <p>Fonte primária de alimento para muitos organismos.</p>
             </div>
-            <div class="coluna">
-                <h3>Frutos 😊🌸🍏🍒🍊🍇</h3>
-                <p>Flores atraem polinizadores, essenciais para a reprodução das plantas e o desenvolvimento dos frutos.</p>
-            </div>
-
             <div class="coluna">
                 <h3>Beleza e Bem-Estar</h3>
                 <p>Melhoram o ambiente e promovem o bem-estar mental.</p>
