--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 campo: eles não trabalham, nem fiam. Eu, contudo, vos afirmo que nem Salomão, em toda a sua glória, se
                 vestiu como qualquer deles.", <i>Mateus 6:28-29</i>
             </p>
+
+            <br><iframe src="https://github.com/sponsors/fvandrad/button" title="Sponsor fvandrad" height="32" width="114" style="border: 0; border-radius: 6px;"></iframe>
+
         </div>
     </section>
 
