--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 
             <br>
             <p>
-                "E por que andais ansiosos quanto ao vestuário? 
+                "E por que andais ansiosos quanto ao vestuário?
                 <br>Considerai como crescem os lírios do
                 campo: eles não trabalham, nem fiam. Eu, contudo, vos afirmo que nem Salomão, em toda a sua glória, se
                 vestiu como qualquer deles.", <i>Mateus 6:28-29</i>
             </p>
 
-            <br><iframe src="https://github.com/sponsors/fvandrad/button" title="Sponsor fvandrad" height="32" width="114" style="border: 0; border-radius: 6px;"></iframe>
+            <br><iframe src="https://github.com/sponsors/fvandrad/button" title="Sponsor fvandrad" height="32"
+                width="114" style="border: 0; border-radius: 6px;"></iframe>
 
         </div>
     </section>
@@ -195,7 +196,8 @@
         <div class="cuidados-grid">
             <div class="coluna">
                 <h3>Polinização</h3>
-                <p>Flores atraem polinizadores, essenciais para a reprodução das plantas e o desenvolvimento dos frutos. 😊🌸🍏🍒🍊🍇</p>
+                <p>Flores atraem polinizadores, essenciais para a reprodução das plantas e o desenvolvimento dos frutos.
+                    😊🌸🍏🍒🍊🍇</p>
             </div>
             <div class="coluna">
                 <h3>Biodiversidade</h3>
