--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Flores Encantadas">
+    <meta property="og:description" content="Considerai como crescem os lírios do campo: eles não trabalham, nem fiam. Eu, contudo, vos afirmo que nem Salomão, em toda a sua glória, se vestiu como qualquer deles, Mateus 6:28-29">
+    <meta property="og:image" content="https://fvandrad.github.io/flor/images/margarida.png">
+    <meta property="og:url" content="https://fvandrad.github.io/flor">
+    <meta property="og:type" content="website">
     <title>Flores Encantadas</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
