--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
     <section id="galeria">
         <h2>Galeria</h2>
         <div class="galeria-grid">
-            <div>🌸</div>
+            <div class="icon">🌸</div>
 
-            <div>🌼</div>
+            <div class="icon">🌼</div>
 
-            <div>🌺</div>
+            <div class="icon">🌺</div>
 
-            <div>🌻</div>
+            <div class="icon">🌻</div>
 
-            <div>🌹</div>
+            <div class="icon">🌹</div>
 
-            <div>🌷</div>
+            <div class="icon">🌷</div>
 
-            <div>🌱</div>
+            <div class="icon">🌱</div>
 
-            <div>🌾</div>
+            <div class="icon">🌾</div>
 
-            <div>🌿</div>
+            <div class="icon">🌿</div>
 
             <!-- Imagens de flores com legendas -->
             <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
