--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body id="top">
     <header>
         <svg width="100" height="100" viewBox="0 0 100 100">
             <circle cx="50" cy="50" r="10" fill="yellow" />
@@ -30,7 +30,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#hero">Home</a></li>
+                <li><a href="#top">Home</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#galeria">Galeria</a></li>
                 <li><a href="#cuidados">Importância</a></li>
