--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="#galeria">Galeria</a></li>
                 <li><a href="#cuidados">Importância</a></li>
                 <li><a href="#contato">Contato</a></li>
+                <li><a href="https://fvandrad.github.io/">Inspiração! 🌟</a></li>
             </ul>
             <div class="hamburger" onclick="toggleMenu()">
                 <div class="bar"></div>
